--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 python-dotenv
-aiohttp
-websockets
 PyNaCl
 https://github.com/Rapptz/discord.py/archive/rewrite.zip
+aiohttp>=1.0.0,<1.1.0
+websockets>=3.1,<4.0
