--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/Rapptz/discord.py
+git+https://github.com/Rapptz/discord.py@rewrite#egg=discord.py[voice]
 python-dotenv
 discord
 pychal
